update federated learning function node

--- a/2021-04-15/ComputationalOrchestrator/demo/jnj/fdlr.ipynb
+++ b/2021-04-15/ComputationalOrchestrator/demo/jnj/fdlr.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "durable-satellite",
+   "id": "turkish-humidity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,30 +16,27 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "seasonal-spouse",
+   "id": "favorite-wright",
    "metadata": {},
    "outputs": [],
    "source": [
     "# show two data servers (vms) and an aggregation server (vmagg)\n",
-    "#vms = spawnvms(3)\n",
-    "#vmagg = vms[-1]\n",
-    "#vms = vms[:-1]\n",
-    "vm1 = connect(\"40.75.70.65\", 7000, \"lbart@igr.com\", \"sailpassword\")\n",
-    "vm2 = connect(\"40.75.70.5\", 7000, \"lbart@igr.com\", \"sailpassword\")\n",
-    "vmagg = connect(\"20.96.116.91\", 7000, \"lbart@igr.com\", \"sailpassword\")\n",
+    "vm1 = connect(\"20.44.107.205\", 7000, \"lbart@igr.com\", \"sailpassword\")\n",
+    "vm2 = connect(\"20.44.107.254\", 7000, \"lbart@igr.com\", \"sailpassword\")\n",
+    "vmagg = connect(\"20.44.107.111\", 7000, \"lbart@igr.com\", \"sailpassword\")\n",
     "vms = [vm1, vm2]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "russian-logan",
+   "id": "painful-isolation",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['4FDCC3A7718F45B781C256CB69CF3005', '8BF526F0BFE54EE09F7AC32074B3BEB2']"
+       "['6816123528CD41A5A6675236637F72C2', '66F116B630914FB59832CE9884D00A34']"
       ]
      },
      "execution_count": 3,
@@ -55,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "racial-transsexual",
+   "id": "thousand-cookie",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "welsh-interpretation",
+   "id": "cutting-adaptation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "guided-approval",
+   "id": "becoming-translator",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "becoming-packaging",
+   "id": "spare-ecuador",
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +126,29 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "thermal-pocket",
+   "id": "adaptive-armenia",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['32CC56FB661546ED99F429130490E9B2D8732F22BD0941F386DF3AEE048F3736',\n",
+       " '161CA6F34EE049A39D0B2165598D74A0D8732F22BD0941F386DF3AEE048F3736']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfg.df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "uniform-israeli",
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +170,7 @@
        " dtype: object]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,92 +182,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "computational-alfred",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Region</th>\n",
-       "      <th>Temp(F)</th>\n",
-       "      <th>Rainfall(mm)</th>\n",
-       "      <th>Humidity(%)</th>\n",
-       "      <th>Apples(ton)</th>\n",
-       "      <th>Oranges(ton)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Kanto</td>\n",
-       "      <td>73</td>\n",
-       "      <td>67</td>\n",
-       "      <td>43</td>\n",
-       "      <td>56</td>\n",
-       "      <td>70</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Johto</td>\n",
-       "      <td>91</td>\n",
-       "      <td>88</td>\n",
-       "      <td>64</td>\n",
-       "      <td>81</td>\n",
-       "      <td>101</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Hoenn</td>\n",
-       "      <td>87</td>\n",
-       "      <td>124</td>\n",
-       "      <td>58</td>\n",
-       "      <td>119</td>\n",
-       "      <td>133</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Region  Temp(F)  Rainfall(mm)  Humidity(%)  Apples(ton)  Oranges(ton)\n",
-       "0  Kanto       73            67           43           56            70\n",
-       "1  Johto       91            88           64           81           101\n",
-       "2  Hoenn       87           124           58          119           133"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#make this part actual synthetic data\n",
-    "dfg.sample(vms[0], dfg.df[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
-   "id": "controlled-camcorder",
+   "id": "developing-treasury",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "forward-punch",
+   "id": "threaded-apache",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "consecutive-marshall",
+   "id": "matched-geneva",
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "reported-dominican",
+   "id": "revolutionary-nation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,8 +240,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "governing-celtic",
+   "execution_count": 13,
+   "id": "short-assessment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "animated-audit",
+   "id": "engaging-prototype",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,8 +268,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "furnished-defendant",
+   "execution_count": 16,
+   "id": "wired-startup",
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +283,11 @@
       "processing round: 37\n",
       "processing round: 46\n",
       "processing round: 55\n",
-      "processing round: 64\n"
+      "processing round: 64\n",
+      "processing round: 73\n",
+      "processing round: 82\n",
+      "processing round: 91\n",
+      "processing round: 100\n"
      ]
     }
    ],
@@ -361,17 +300,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "suburban-athletics",
+   "execution_count": 17,
+   "id": "exterior-winning",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1.2953567504882812, 0.7586970329284668]"
+       "1.4131690979003906"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,8 +322,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "fossil-butler",
+   "execution_count": 14,
+   "id": "early-journalist",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,8 +333,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "strategic-drink",
+   "execution_count": 15,
+   "id": "broad-arcade",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,15 +347,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "modular-fitting",
+   "execution_count": 16,
+   "id": "useful-database",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m[I 2021-04-15 18:49:56,980]\u001b[0m A new study created in memory with name: no-name-db7f2f1c-6202-4411-85ba-21502e55fd3f\u001b[0m\n"
+      "\u001b[32m[I 2021-04-16 12:34:34,860]\u001b[0m A new study created in memory with name: no-name-36983a54-92da-4a90-b8ea-ea70d6838532\u001b[0m\n"
      ]
     },
     {
@@ -441,7 +380,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m[I 2021-04-15 18:54:12,676]\u001b[0m Trial 0 finished with value: 4.267003456751506 and parameters: {'n_lr': 2.6397712625955436e-05}. Best is trial 0 with value: 4.267003456751506.\u001b[0m\n"
+      "\u001b[32m[I 2021-04-16 12:40:44,032]\u001b[0m Trial 0 finished with value: 2.5347335815429686 and parameters: {'n_lr': 7.77735837165351e-05}. Best is trial 0 with value: 2.5347335815429686.\u001b[0m\n"
      ]
     },
     {
@@ -466,7 +405,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m[I 2021-04-15 18:58:28,845]\u001b[0m Trial 1 finished with value: 5.76754872004191 and parameters: {'n_lr': 2.4960121595429822e-05}. Best is trial 0 with value: 4.267003456751506.\u001b[0m\n"
+      "\u001b[32m[I 2021-04-16 12:46:22,573]\u001b[0m Trial 1 finished with value: 2.8942440032958983 and parameters: {'n_lr': 6.03870188968855e-05}. Best is trial 0 with value: 2.5347335815429686.\u001b[0m\n"
      ]
     },
     {
@@ -491,7 +430,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m[I 2021-04-15 19:02:47,076]\u001b[0m Trial 2 finished with value: 1.6436131000518799 and parameters: {'n_lr': 7.985380168418907e-05}. Best is trial 2 with value: 1.6436131000518799.\u001b[0m\n"
+      "\u001b[32m[I 2021-04-16 12:52:05,408]\u001b[0m Trial 2 finished with value: 4.319192504882812 and parameters: {'n_lr': 3.09930875201408e-05}. Best is trial 0 with value: 2.5347335815429686.\u001b[0m\n"
      ]
     }
    ],
@@ -503,11 +442,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "continental-continuity",
+   "id": "flexible-apollo",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Show prediction?"
+    "Thanks"
    ]
   }
  ],
