add logistic regression

--- a/2021-05-13/ComputationalOrchestrator/demo/bmnt/bmnt.ipynb
+++ b/2021-05-13/ComputationalOrchestrator/demo/bmnt/bmnt.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sail.data import DataFrameGroup\n",
-    "from sail.core import connect"
+    "from sail.core import connect\n",
+    "from sail.algo import FdLogistic"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,47 +35,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vm1 = connect(\"20.102.59.40\", 7000, \"lbart@igr.com\", \"sailpassword\")\n",
-    "vm2 = connect(\"20.102.63.69\", 7000, \"lbart@igr.com\", \"sailpassword\")\n",
-    "vm3 = connect(\"20.102.59.17\", 7000, \"lbart@igr.com\", \"sailpassword\")\n",
-    "vms = [vm1, vm2, vm3]\n",
-    "workplace = \"/home/jjj/playground/tmp/\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['D154E4AF564A49A2B950EFA7CF58CFC6',\n",
-       " '1B2889DADF61438097B4A6790EAB68F9',\n",
-       " '49E7D2AE0DAB490E816F4286447D43B1']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "vms"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfg = DataFrameGroup(vms, workplace)\n",
-    "dfg.import_data([0,0,0])"
+    "vm1 = connect(\"40.121.60.102\", 7000, \"lbart@igr.com\", \"sailpassword\")\n",
+    "vm2 = connect(\"40.121.63.225\", 7000, \"lbart@igr.com\", \"sailpassword\")\n",
+    "vm3 = connect(\"40.121.47.115\", 7000, \"lbart@igr.com\", \"sailpassword\")\n",
+    "vms = [vm1, vm2, vm3]\n",
+    "workplace = \"/home/jjj/playground/tmp/\""
    ]
   },
   {
@@ -85,10 +54,42 @@
     {
      "data": {
       "text/plain": [
-       "[0.5133333333333333, 0.755, 0.7536231884057971, 0.6274165202108963]"
+       "['406874BC016F4CC9BB0F229CBBFD5469',\n",
+       " '445378323A9A4FF493365FD97FA35A40',\n",
+       " '5EA32D13A1C145B693154B97345FFE88']"
       ]
      },
      "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfg = DataFrameGroup(vms, workplace)\n",
+    "dfg.import_data([0,0,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.5133333333333333, 0.755, 0.7536231884057971, 0.6274165202108963]"
+      ]
+     },
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +289,7 @@
        "[4 rows x 31 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,18 +304,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['9644BC43B96044D3B075DF8F0D5AD9B5B2201AB6A02B4AD8A4BA6C7041B8BA4C',\n",
-       " 'FB16A883B65249949390451C20109DC2B2201AB6A02B4AD8A4BA6C7041B8BA4C',\n",
-       " '6C91B5C335FF48DBAB6CEEEABB1D22FAB2201AB6A02B4AD8A4BA6C7041B8BA4C']"
+       "['01CF2B4FC7A24D13B7E7EBAF95FC67C2515D67064F4F46619BCFBB6E6869AC92',\n",
+       " '685008C7E84B45EFB68E4E2E43411C28515D67064F4F46619BCFBB6E6869AC92',\n",
+       " '4761D3D780F041CD9BE9FE9324B89D4C515D67064F4F46619BCFBB6E6869AC92']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +434,7 @@
        " dtype: float64]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +482,7 @@
        "        5.02375979e-125, 1.20609918e-025, 1.02815701e-015]))"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +631,7 @@
        "[2 rows x 31 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +774,7 @@
        "[2 rows x 31 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +888,7 @@
        "[1 rows x 32 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -903,22 +904,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# That's pretty much it. Check out the \"fdstat\" notebook from JingWei, which contains the calls to the \n",
-    "# Federated computation functions: \n",
-    "#    - mean, standard deviation, max, min\n",
-    "# It also contains calls to do transformations:\n",
-    "#    - log, standardization, normalization\n",
-    "\n",
-    "# For the KCA/BMNT demo, if federated mean is all we need, then we should be set.\n",
-    "# I think JingWei coded the federated mean to use a secure enclave to do the aggregation (i.e. weighted averaging) \n",
-    "# so that the Orchestrator does not have to see the individual mean values from each party.  Caveat here is that\n",
-    "# there is no encryption on the pulled data (which get pushed to the enclave) so the Orchestrator *can* see the \n",
-    "# individual results. So there is not \"end-to-end encryption\" the way we like to describe it in the context of \n",
-    "# High Assurance computation."
+    "df_tmp = dfg.bin_cate(dfg.df, 'diagnosis')\n",
+    "y_df = dfg.get_col(['diagnosis','diagnosis','diagnosis'], df_tmp)\n",
+    "X_df = dfg.drop(['diagnosis','diagnosis','diagnosis'], [1,1,1], df_tmp)\n",
+    "y_arr = dfg.to_numpy(y_df)\n",
+    "X_arr = dfg.to_numpy(X_df)\n",
+    "X_train = dfg.to_tensor(X_arr, 1)\n",
+    "y_train = dfg.to_tensor(y_arr, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = {}\n",
+    "data['X_train']=[X_train[0], X_train[1]]\n",
+    "data['y_train']=[y_train[0], y_train[1]]\n",
+    "X_test = X_train[2]\n",
+    "y_test = y_train[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fdl = FdLogistic([vm1, vm2], vm3, data, workplace)\n",
+    "num_feature = dfg.df_get_feature_num(X_df[0])\n",
+    "model = fdl.initmodel(num_feature)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn as nn\n",
+    "import torch\n",
+    "class LogisticRegression(nn.Module):\n",
+    "    def __init__(self, n_input_features):\n",
+    "        super(LogisticRegression, self).__init__()\n",
+    "        self.linear = nn.Linear(n_input_features, 1)\n",
+    "    \n",
+    "    def forward(self,x):\n",
+    "        y_predict = torch.sigmoid(self.linear(x))\n",
+    "        return y_predict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = fdl.train(model, num_feature, 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(41.8551)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "acc = fdl.test(model, num_feature, X_test, y_test)\n",
+    "acc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "41.855072021484375"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = acc.numpy()\n",
+    "float(a)"
    ]
   }
  ],
