update script, add mono ttest

--- a/2021-05-13/ComputationalOrchestrator/demo/bmnt/bmnt.ipynb
+++ b/2021-05-13/ComputationalOrchestrator/demo/bmnt/bmnt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,25 +84,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Connect to Secure Computation Enclave\n",
-    "vm1 = connect(\"52.186.144.38\", 7000, \"lbart@igr.com\", \"sailpassword\")\n",
-    "vm2 = connect(\"52.186.144.231\", 7000, \"lbart@igr.com\", \"sailpassword\")\n",
-    "vm3 = connect(\"52.249.252.162\", 7000, \"lbart@igr.com\", \"sailpassword\")\n",
+    "vm1 = connect(\"52.226.73.157\", 7000, \"lbart@igr.com\", \"sailpassword\")\n",
+    "vm2 = connect(\"52.188.148.39\", 7000, \"lbart@igr.com\", \"sailpassword\")\n",
+    "vm3 = connect(\"40.71.121.67\", 7000, \"lbart@igr.com\", \"sailpassword\")\n",
     "\n",
     "# Set up federated computation cluster \n",
     "vms = [vm1, vm2, vm3]\n",
     "\n",
     "# temporary file location\n",
-    "workplace = \"/home/demo/tmp\""
+    "workplace = \"/home/jjj/playground/tmp\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,18 +112,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['B1007707D92A4E57B47DDB957F1EB1AF',\n",
-       " 'E8084A317D5046F38F1F3C6D04A73BBE',\n",
-       " '0566725D6F894FE8ADBCF5E800C2F177']"
+       "['AEC7A18D4C954D4E889B673732057BFE',\n",
+       " '29A142A6DC7A4118BE82EF06019FD28F',\n",
+       " '475EA24DA9F840FD8633548889E1FF0F']"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        "[0.5133333333333333, 0.755, 0.7536231884057971, 0.6274165202108963]"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
        "[4 rows x 31 columns]"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
        "        5.02375979e-125, 1.20609918e-025, 1.02815701e-015]))"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,6 +507,74 @@
     "m_df_no_diag = dfg.drop(['diagnosis','diagnosis','diagnosis'], [1,1,1], m_df)\n",
     "tt_result = dfg.ttest_ind(b_df_no_diag, m_df_no_diag)\n",
     "tt_result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[array([3.76408575e-01, 1.62492217e-45, 2.14872862e-19, 8.31833771e-48,\n",
+       "         6.46025624e-40, 5.84995816e-10, 2.63355755e-28, 3.35185652e-34,\n",
+       "         5.80571651e-52, 4.78364914e-08, 4.85825145e-01, 1.61804039e-21,\n",
+       "         2.86830402e-01, 4.38279479e-21, 1.48739378e-21, 5.80228217e-02,\n",
+       "         5.15329114e-06, 2.51454934e-03, 7.11783890e-09, 1.94603540e-01,\n",
+       "         2.85706389e-01, 3.22998774e-57, 3.07226678e-22, 7.05147308e-59,\n",
+       "         4.85971357e-47, 2.23680556e-15, 9.69473973e-30, 1.12269872e-33,\n",
+       "         8.69734087e-63, 1.20764436e-14, 3.09842477e-10]),\n",
+       "  array([ -0.31521748, -16.85006577,  -9.5698641 , -17.4591834 ,\n",
+       "         -15.35781645,  -6.28378501, -12.18996945, -13.81789851,\n",
+       "         -18.5657272 ,  -5.46946799,  -0.03556844, -10.21991504,\n",
+       "           0.5632903 , -10.08906542, -10.23093453,   1.57617847,\n",
+       "          -4.48747688,  -2.82618055,  -5.83210326,   0.86231593,\n",
+       "          -0.56659953, -19.9725185 , -10.43637941, -20.41999415,\n",
+       "         -17.25534771,  -8.27077478, -12.59120233, -13.67494465,\n",
+       "         -21.48006607,  -8.02130716,  -6.39493205])],\n",
+       " [array([1.10428938e-01, 2.23606568e-42, 7.02127474e-09, 1.93630804e-44,\n",
+       "         1.04180825e-40, 1.52715990e-10, 8.99754197e-25, 3.77221477e-41,\n",
+       "         8.49761781e-52, 2.83287948e-06, 4.31454739e-01, 4.46962196e-23,\n",
+       "         2.43452901e-01, 1.56335857e-21, 5.66306296e-19, 2.52039869e-01,\n",
+       "         1.63805400e-06, 2.38016985e-09, 5.22978063e-16, 2.14974773e-01,\n",
+       "         1.82352180e-02, 2.68226596e-47, 1.21917924e-09, 2.27580583e-48,\n",
+       "         8.69451072e-40, 9.92310728e-13, 8.99748435e-19, 2.07473797e-30,\n",
+       "         1.22700826e-47, 2.02803278e-07, 4.05932111e-05]),\n",
+       "  array([ -1.22812516, -17.50579391,  -5.91935744, -18.19789662,\n",
+       "         -16.95040065,  -6.63373912, -11.73093582, -17.09692187,\n",
+       "         -20.72794989,  -4.6652711 ,   0.1728964 , -11.16811521,\n",
+       "          -0.6965429 , -10.65060312,  -9.77760955,  -0.66930639,\n",
+       "          -4.78914156,  -6.12649667,  -8.73189652,  -0.7908985 ,\n",
+       "          -2.10593264, -19.16857142,  -6.2523916 , -19.536195  ,\n",
+       "         -16.64514877,  -7.50954514,  -9.70801935, -13.57670096,\n",
+       "         -19.28488243,  -5.24199652,  -4.0246712 ])],\n",
+       " [array([1.33357760e-01, 1.61945689e-14, 7.86045171e-03, 3.59300250e-15,\n",
+       "         4.96110892e-15, 8.14357236e-02, 1.23098663e-06, 8.88113935e-17,\n",
+       "         8.41424605e-18, 3.91077291e-03, 1.54400482e-01, 1.64833025e-10,\n",
+       "         4.14491835e-01, 6.47083463e-11, 1.52278659e-12, 1.58929492e-02,\n",
+       "         1.33564284e-03, 3.27939523e-05, 5.50695534e-05, 1.46940057e-01,\n",
+       "         3.27471537e-01, 4.31776697e-16, 1.97197905e-03, 8.80154339e-17,\n",
+       "         7.41824579e-16, 2.01968312e-01, 1.04916554e-07, 3.48506004e-12,\n",
+       "         4.93662057e-16, 3.90726767e-03, 5.95647077e-02]),\n",
+       "  array([ -1.11999318,  -9.60176694,  -2.47844249,  -9.9718872 ,\n",
+       "          -9.8923428 ,  -1.4109993 ,  -5.15167592, -10.89482873,\n",
+       "         -11.49454175,  -2.74211507,   1.02553134,  -7.36910462,\n",
+       "           0.21685068,  -7.59471071,  -8.49822184,   2.19296372,\n",
+       "          -3.1194747 ,  -4.25873631,  -4.11001862,   1.05794476,\n",
+       "          -0.448913  , -10.4978241 ,  -2.98604101, -10.89710076,\n",
+       "         -10.36286788,  -0.83992691,  -5.78391368,  -8.29853291,\n",
+       "         -10.46438221,  -2.74244331,  -1.57863696])]]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tt_result_mono = dfg.ttest_ind_mono(b_df_no_diag, m_df_no_diag)\n",
+    "tt_result_mono"
    ]
   },
   {
